# BeaconOps

./: .gitignore  LICENSE  README.md  README_EN.md
docs/Completed/: 00-完工总览.md  01-硬件与固件完工说明.md  05-功能证据索引.md  06-系统完整功能总结.md
docs/Design Document/落地/: decisions.md  firmware-changes-v1.md  frontend-v1.md  protocol-v1.md
docs/Design Document/论文/: 项目总体方案.md
src/: README.md  README_EN.md
src/Backend/: .env.example  .gitignore  README.md  README_EN.md  requirements.txt
src/Backend/app/: __init__.py  audit.py  auth.py  broker_control.py  config.py  database.py  events.py  identity.py  main.py  messages.py  mqtt_client.py  uplink_handler.py
src/Frontend/: .gitignore  README.md  README_EN.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/Frontend/src/: main.ts  styles.css
src/Hardware/: README.md  README_EN.md
src/Hardware/Enclosure/: README.md  README_EN.md
src/Hardware/Firmware/components/decode/png/: CMakeLists.txt  PNGdec.h
src/Hardware/Firmware/components/ui/: CMakeLists.txt  generate_misans_font.py  lv_font_misans_bold_16_gb2312.charset.txt  ui.c  ui.h
src/Hardware/Firmware/main/: CMakeLists.txt  main.cpp
src/Hardware/Firmware/main/example/: display_example.cpp  sensor_example.c
src/Hardware/PCB/: README.md  (+2 more)
完工/: 00-完工总览.md  01-硬件与固件完工说明.md  02-服务器完工说明.md  03-前端完工说明.md  04-协议与数据模型完工说明.md  05-功能证据索引.md  07-系统适用场景分析.md
草稿/: 完整流程.md  实际流程.md  流程.md  草稿.md
落地/: data-model-v1.md  decisions.md  firmware-changes-v1.md  frontend-v1.md  protocol-v1.md
论文/: 01-通信协议规格.md  02-客户端固件规格.md  03-前端与服务端规格.md  04-实验设计与研究贡献.md
(+141 files in other folders)
